~~awesome: seperated validators into new file

--- a/src/index.css
+++ b/src/index.css
@@ -314,6 +314,8 @@
 .header {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   overflow: hidden;
+  @apply qy:line-clamp-1
 }
+
